Fixed burst-input, added job map data
Input from Pimoroni (via python) was buffered. Buffering diabled, input
is now smooth.
MonitorProcess is now using apache exec (the burst input actually from
buffering; this change was probably not required).
Schema change to add job.data JSON column, code adjusted to support
storing map data in Job (values in result should migrate here).
Various other improvements.